k8s/rabbitmq-cluster-operator/templates/messaging-topology-operator/deployment.yaml
---
# Source: rabbitmq-cluster-operator/templates/messaging-topology-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-release-rabbitmq-messaging-topology-operator
  namespace: "bus"
  labels:
    app.kubernetes.io/instance: rabbit-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/version: 1.15.0
    helm.sh/chart: rabbitmq-cluster-operator-4.3.26
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/part-of: rabbitmq
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: rabbit-release
      app.kubernetes.io/name: rabbitmq-cluster-operator
      app.kubernetes.io/component: messaging-topology-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rabbit-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: rabbitmq-cluster-operator
        app.kubernetes.io/version: 1.15.0
        helm.sh/chart: rabbitmq-cluster-operator-4.3.26
        app.kubernetes.io/component: messaging-topology-operator
        app.kubernetes.io/part-of: rabbitmq
    spec:
      serviceAccountName: rabbit-release-rabbitmq-messaging-topology-operator
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: rabbit-release
                    app.kubernetes.io/name: rabbitmq-cluster-operator
                    app.kubernetes.io/component: messaging-topology-operator
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      dnsPolicy: ClusterFirst
      containers:
        - name: rabbitmq-cluster-operator
          image: docker.io/bitnami/rmq-messaging-topology-operator:1.15.0-debian-12-r1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          command:
            - /manager
          args:
            - --metrics-bind-address=:8080
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: https-webhook
              containerPort: 9443
              protocol: TCP
            - name: http-metrics
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: http-metrics
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /metrics
              port: http-metrics
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: rabbit-release-rabbitmq-messaging-topology-operator-webhook
