k8s/rabbitmq-cluster-operator/templates/messaging-topology-operator/validating-webhook-configuration.yaml
---
# Source: rabbitmq-cluster-operator/templates/messaging-topology-operator/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: rabbit-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/version: 1.15.0
    helm.sh/chart: rabbitmq-cluster-operator-4.3.26
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/part-of: rabbitmq
  annotations:
  name: rabbit-release-rabbitmq-messaging-topology-operator-webhook-bus
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-binding
        port: 443
    failurePolicy: Fail
    name: vbinding.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - bindings
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-exchange
        port: 443
    failurePolicy: Fail
    name: vexchange.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - exchanges
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-federation
        port: 443
    failurePolicy: Fail
    name: vfederation.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - federations
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-operatorpolicy
        port: 443
    failurePolicy: Fail
    name: voperatorpolicy.kb.io
    rules:
    - apiGroups:
      - rabbitmq.com
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - operatorpolicies
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1alpha1-superstream
        port: 443
    failurePolicy: Fail
    name: vsuperstream.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - superstreams
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-permission
        port: 443
    failurePolicy: Fail
    name: vpermission.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - permissions
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-topicpermission
        port: 443
    failurePolicy: Fail
    name: vtopicpermission.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - topicpermissions
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-policy
        port: 443
    failurePolicy: Fail
    name: vpolicy.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - policies
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-queue
        port: 443
    failurePolicy: Fail
    name: vqueue.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - queues
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-schemareplication
        port: 443
    failurePolicy: Fail
    name: vschemareplication.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - schemareplications
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-shovel
        port: 443
    failurePolicy: Fail
    name: vshovel.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - shovels
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-user
        port: 443
    failurePolicy: Fail
    name: vuser.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - users
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRZWl3S29zanp1clFUUXJpdE04bll4REFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTVRFd09ERXdNek14TTFvWApEVEkxTVRFd09ERXdNek14TTFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3NCTXZFalN2UEI2U3R1Z2tGc0p6UnUKNktwMjFPTk1kWDB6ZFVQMllqR0xrUlE4KzRXSTdYL0UyNXZwZUJKV1BZSkIzcGFENnJSTjBVTTlFNDJaaTY1OQpUYlUzR3VvQVYz [...]
      service:
        name: rabbit-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "bus"
        path: /validate-rabbitmq-com-v1beta1-vhost
        port: 443
    failurePolicy: Fail
    name: vvhost.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - vhosts
    sideEffects: None
